[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/BetterTextEdit.gd" type="Script" id=1]

[node name="BetterTextEdit" type="TextEdit"]
offset_right = 104.0
offset_bottom = 40.0
theme_override_colors/caret_color = Color( 0, 0, 0, 0 )
theme_override_colors/font_color = Color( 0, 0, 0, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
hint = "enter type"

[node name="Hint" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "Here's a hint!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="." to="." method="_on_BetterTextEdit_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_BetterTextEdit_focus_exited"]
[connection signal="text_changed" from="." to="." method="_on_BetterTextEdit_text_changed"]
